--- a/proj-index.html
+++ b/proj-index.html
@@ -91,7 +91,7 @@
                                 rel="noreferrer">ty_disruption</a></li>
                         <li><a class="underline" href="https://github.com/aiyannaaaaa/matchayan" target="_blank"
                                 rel="noreferrer">matchayan</a></li>
-                        <li><a class="underline is-featured" href="https://github.com/aiyannaaaaa/matchayan"
+                        <li><a class="underline is-featured" href="https://github.com/aiyannadigital/aiyannalopez.com"
                                 target="_blank" rel="noreferrer">this portflio site</a></li>
                     </ul>
 
