--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About • Aiyanna</title>
+  <title>about aiyanna</title>
 
   <!-- Global site styles (header, fonts, cursor base styles, etc.) -->
   <link rel="stylesheet" href="styles.css" />
