--- a/proj-index.html
+++ b/proj-index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project Index • Aiyanna</title>
+    <title>aiyanna's index</title>
 
     <!-- Global site styles (fonts, header, cursor, etc.) -->
     <link rel="stylesheet" href="styles.css" />
