--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Work • Aiyanna</title>
+  <title>aiyanna's work</title>
 
   <!-- Global site styles -->
   <link rel="stylesheet" href="styles.css" />
