--- a/about.html
+++ b/about.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>about aiyanna</title>
-
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" type="image/png" sizes="32x32" href="/imgs/Frame 2.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="imgs/Frame 3.png">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  
   <!-- Global site styles (header, fonts, cursor base styles, etc.) -->
   <link rel="stylesheet" href="styles.css" />
 
