--- a/about.html
+++ b/about.html
@@ -5,10 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>about aiyanna</title>
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" type="image/png" sizes="32x32" href="/imgs/Frame 2.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="imgs/Frame 3.png">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+<!-- Favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16.png">
   
   <!-- Global site styles (header, fonts, cursor base styles, etc.) -->
   <link rel="stylesheet" href="styles.css" />
