--- a/work.html
+++ b/work.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>aiyanna's work</title>
 
+
+  <!-- Favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16.png">
   <!-- Global site styles -->
   <link rel="stylesheet" href="styles.css" />
   <!-- Work-only styles -->
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" type="image/png" sizes="32x32" href="/imgs/Frame 2.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="imgs/Frame 3.png">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
   <link rel="stylesheet" href="work.css" />
 
   <!-- Icons -->
