--- a/proj-index.html
+++ b/proj-index.html
@@ -74,7 +74,7 @@
 
                     <ul class="proj-list" aria-label="External projects">
                         <li><a class="underline" href="https://mi-dulce-pjel.square.site/" target="_blank"
-                                rel="noreferrer">Mi Dulce PJEL</a></li>
+                                rel="noreferrer">Mi Dulce P'jel</a></li>
                         <li><a class="underline" href="https://outerrabrands.com/" target="_blank"
                                 rel="noreferrer">Outerra Brands</a></li>
                         <li><a class="underline" href="https://birdsetc.vercel.app/" target="_blank"
