--- a/work.html
+++ b/work.html
@@ -72,6 +72,24 @@ Post-launch, the new website achieved the highest online sales in company histor
         <img class="work-img" src="imgs/1.png" alt="Olympia USA preview" />
       </button>
 
+      <!-- elsewhere within -->
+      <button class="work-tile"
+        data-title="Elsehwere, Within."
+        data-meta="Narrative + Graphic Design • 2025"
+        data-img="imgs/ew.png"
+        data-desc="Elsewhere, Within is an interactive publication that transforms the familiar structure of an activity book into a meditative space for self-reflection. Through a series of prompts, games, and visual exercises, the project invites readers to engage slowly and intentionally with the page—treating each activity not as a task to complete, but as an opportunity to pause, notice, and reconnect with themselves.
+The book reimagines formats like word searches, mazes, fill-in-the-blanks, and poetry exercises as reflective tools, shifting them away from traditional notions of play and productivity. Each section encourages creative participation through writing, drawing, and intuitive decision-making. The result is a tactile, analog experience that emphasizes process over product, embracing imperfection, curiosity, and presence.
+Visually, Elsewhere, Within uses calm, minimal design to hold space for introspection. The addition of subtle color, spacious margins, and gentle typography supports the act of slowing down. Each page is designed to feel open and inviting, allowing readers to bring their own meanings to the work.
+Conceptually, the project explores ideas of inner movement, quiet transformation, and the relationship between structure and openness. It asks: What happens when we treat everyday forms of play as spaces for care and awareness? How might self-reflection feel if it’s approached through softness, experimentation, and creative exploration?
+Elsewhere, Within exists as both an art object and an invitation—a reminder that reflection does not always require answers, and that becoming is a continual, unfolding process.">
+
+        <span class="work-info">
+          <span class="work-name">Elsehwere, Within.</span>
+          <span class="work-meta">Narrative + Graphic Design • 2025</span>
+        </span>
+        <img class="work-img" src="imgs/ew.png" alt="Elsewhere, Within."/>
+      </button>
+
       <!-- LOOM -->
       <button class="work-tile"
         data-title="LOOM"
