--- a/work.html
+++ b/work.html
@@ -76,6 +76,7 @@ Post-launch, the new website achieved the highest online sales in company histor
       <button class="work-tile"
         data-title="Elsehwere, Within."
         data-meta="Narrative + Graphic Design • 2025"
+        data-youtube=none
         data-img="imgs/ew.png"
         data-desc="Elsewhere, Within is an interactive publication that transforms the familiar structure of an activity book into a meditative space for self-reflection. Through a series of prompts, games, and visual exercises, the project invites readers to engage slowly and intentionally with the page—treating each activity not as a task to complete, but as an opportunity to pause, notice, and reconnect with themselves.
 The book reimagines formats like word searches, mazes, fill-in-the-blanks, and poetry exercises as reflective tools, shifting them away from traditional notions of play and productivity. Each section encourages creative participation through writing, drawing, and intuitive decision-making. The result is a tactile, analog experience that emphasizes process over product, embracing imperfection, curiosity, and presence.
