--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>aiyanna lopez</title>
-<!-- Favicon -->
-<link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16.png">
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16.png">
   <link rel="stylesheet" href="styles.css" />
 
   <!-- Icons -->
@@ -32,6 +33,10 @@
         <a class="nav-link underline" href="about.html">about</a>
         <a class="nav-link underline" href="work.html">work</a>
         <a class="nav-link underline" href="proj-index.html">index</a>
+        <button class="theme-toggle underline" type="button" id="themeToggle" aria-label="Toggle dark mode"
+          aria-pressed="false">
+          ☾
+        </button>
       </div>
 
       <div class="nav-center">
@@ -42,10 +47,12 @@
         <a class="icon-link underline" href="https://youtube.com" target="_blank" rel="noreferrer" aria-label="YouTube">
           <i data-lucide="youtube"></i>
         </a>
-        <a class="icon-link underline" href="https://instagram.com" target="_blank" rel="noreferrer" aria-label="Instagram">
+        <a class="icon-link underline" href="https://instagram.com" target="_blank" rel="noreferrer"
+          aria-label="Instagram">
           <i data-lucide="instagram"></i>
         </a>
-        <a class="icon-link underline" href="https://substack.com" target="_blank" rel="noreferrer" aria-label="Substack">
+        <a class="icon-link underline" href="https://substack.com" target="_blank" rel="noreferrer"
+          aria-label="Substack">
           <i data-lucide="newspaper"></i>
         </a>
         <a class="icon-link underline" href="https://tumblr.com" target="_blank" rel="noreferrer" aria-label="Tumblr">
@@ -71,4 +78,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
