--- a/proj-index.html
+++ b/proj-index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>aiyanna's index</title>
 
-<!-- Favicon -->
-<link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16.png">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16.png">
     <!-- Global site styles (fonts, header, cursor, etc.) -->
     <link rel="stylesheet" href="styles.css" />
 
@@ -37,6 +37,10 @@
                 <a class="nav-link underline" href="about.html">about</a>
                 <a class="nav-link underline" href="work.html">work</a>
                 <a class="nav-link underline" href="proj-index.html">index</a>
+                <button class="theme-toggle underline" type="button" id="themeToggle" aria-label="Toggle dark mode"
+                    aria-pressed="false">
+                    ☾
+                </button>
             </div>
 
             <div class="nav-center">
